// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates changeview action for Inbox 1`] = `
Object {
  "payload": "Inbox",
  "type": "CHANGE_VIEW",
}
`;

exports[`Creates changeview action for Playlist 1`] = `
Object {
  "payload": "Playlist",
  "type": "CHANGE_VIEW",
}
`;

exports[`reducer changes state and renders correctly 1`] = `
Object {
  "view": "Filter",
}
`;

exports[`reducer returns default state and renders correctly 1`] = `
Object {
  "view": "Authentication",
}
`;

exports[`renders correctly 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "#50BFB9",
        "color": "#000",
        "fontSize": 16,
        "fontWeight": "bold",
        "marginTop": 0,
        "padding": 10,
        "paddingTop": 30,
        "textAlign": "center",
      }
    }
  >
    Authentication
  </Text>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#BCDDD4",
        "flexDirection": "row",
        "justifyContent": "space-around",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    />
  </View>
</View>
`;
